--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
         "jszip": "^3.6.0",
         "less": "^3.12.2",
         "less-loader": "7.1.0",
-        "lodash": "4.17.20",
+        "lodash": "^4.17.20",
         "md5": "^2.3.0",
         "mini-css-extract-plugin": "1.3.1",
         "mitt": "2.1.0",
