fixes #3299, fixes #3300, fixes #3301, fixes #3302, fixes #3303
Closes #3299, #3300, #3301, #3302, and #3303

Merge request studip/studip!2267

--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
         "ezyang/htmlpurifier": "^4.13",
         "davefx/phplot": "^6.2",
         "jasig/phpcas": "1.5",
-        "phpxmlrpc/phpxmlrpc": "^4.4",
-        "phpxmlrpc/extras": "^0.6.2",
+        "phpxmlrpc/phpxmlrpc": "^4.9.0",
+        "phpxmlrpc/extras": "^1.0.0-beta2",
         "algo26-matthias/idna-convert": "^3.0",
         "caxy/php-htmldiff": "^0.1.9",
         "phpseclib/phpseclib": "^3",
