ignore images in public/pictures/stock-images, fixes #3329
Closes #3329

Merge request studip/studip!2403

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ public/pictures/banner/*.jpg
 public/pictures/banner/*.png
 public/pictures/course/[0-9a-f]*.png
 public/pictures/institute/[0-9a-f]*.png
+public/pictures/stock-images/*
 public/pictures/user/[0-9a-f]*.png
 public/plugins_packages/*
 
