--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
         "md5": "^2.3.0",
         "mini-css-extract-plugin": "1.3.1",
         "mitt": "2.1.0",
+        "mp3tag.js": "3.7.1",
         "multiselect": "0.9.12",
         "pdfjs-dist": "^2.6.347",
         "portal-vue": "^2.1.7",
