Neuentwicklung der Exporte closes StEP #1959
Closes #1959, #3451, #3424, #3435, #3454, #3455, and #3456

Merge request studip/studip!2212

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
         "phpowermove/docblock": "^2.0",
         "ksubileau/color-thief-php": "^2.0",
         "symfony/polyfill-php82": "^1.28",
-        "symfony/polyfill-php83": "^1.28"
+        "symfony/polyfill-php83": "^1.28",
+        "phpoffice/phpspreadsheet": "^1.19"
     },
     "replace": {
         "symfony/polyfill-php54": "*",
