--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "config": {
         "vendor-dir": "composer",
         "platform": {
-            "php": "7.2.5"
+            "php": "7.4"
         }
     },
     "require-dev": {
@@ -55,8 +55,6 @@
         "league/oauth2-server": "^8.3",
         "willdurand/negotiation": "^3.1",
         "monolog/monolog": "^2.8",
-        "symfony/polyfill-php73": "^1.27",
-        "symfony/polyfill-php74": "^1.27",
         "symfony/polyfill-php80": "^1.27",
         "symfony/polyfill-php81": "^1.27",
         "phpowermove/docblock": "^2.0",
@@ -72,6 +70,8 @@
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php71": "*",
         "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
         "symfony/polyfill-mbstring": "*"
     }
 }
