--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       AUTO_MIGRATE: 1
 
       # Use proxy url OR autoproxy if run behind a proxy
-      # PROXY_URL: https://studip.example.com/
+      PROXY_URL: https://studip.ceskar.xyz/
       # AUTO_PROXY: 1
 
       # Demo data for your studip instance
