--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,11 @@ services:
       # Use automigrate to migrate your instance on startup
       AUTO_MIGRATE: 1
 
+      #enable but fit IDP
+      #it needs to be configured first in docker/studip/config_local.inc.php
+      #and in docker/studip/simplesamlphp
+      BUT_FIT_IDP: 1
+
       # Use proxy url OR autoproxy if run behind a proxy
       PROXY_URL: https://studip.ceskar.xyz/
       # AUTO_PROXY: 1
