--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     build:
       context: .
       dockerfile: ./docker/studip/Dockerfile
-      args:
-        - ProxyUrl=https://studip.ceskar.xyz/
+#      args:
+#        - ProxyUrl=http://localhost/
 
     depends_on:
       - db
@@ -46,7 +46,7 @@ services:
       BUT_FIT_IDP: 1
 
       # Use proxy url OR autoproxy if run behind a proxy
-      PROXY_URL: https://studip.ceskar.xyz/
+      # PROXY_URL:
       # AUTO_PROXY: 1
 
       # Demo data for your studip instance
